--- a/NaiveBayes_playTennis.ipynb
+++ b/NaiveBayes_playTennis.ipynb
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LPmbuIdDAGcf",
-        "outputId": "665ca08b-7c8f-4173-d437-8613ad28ddf5"
+        "outputId": "389b4fb1-68b2-4f39-de87-8617ed10840e"
       },
       "outputs": [
         {
@@ -49,7 +49,7 @@
             "[0 0 1 1 1 0 1 0 1 1 1 1 1 0]\n",
             "_____________________________________________\n",
             "[[2, 1, 0, 1], [2, 1, 0, 0], [0, 1, 0, 1], [1, 2, 0, 1], [1, 0, 1, 1], [1, 0, 1, 0], [0, 0, 1, 0], [2, 2, 0, 1], [2, 0, 1, 1], [1, 2, 1, 1], [2, 2, 1, 0], [0, 2, 0, 0], [0, 1, 1, 1], [1, 2, 0, 0]]\n",
-            "Predicted Value: [0]\n"
+            "The Condiotions are Okay to play Tennis Today\n"
           ]
         }
       ],
@@ -100,8 +100,12 @@
         "#Temp : 0 = Cool ; 1 = Hot; 2 = Mild\n",
         "#Humidity : 0 = High  ; 1 = Normal\n",
         "#Wind : 0 =Strong  ; 1 = Weak \n",
-        "predicted= model.predict([[2, 0, 0 , 0]]) # 2:Sunny, 0:Cool ; 0:High ; 0:Strong \n",
-        "print(\"Predicted Value:\", predicted)\n"
+        "predicted= model.predict([[0, 1, 0 , 1]]) # 2:Sunny, 0:Cool ; 0:High ; 0:Strong \n",
+        "#print(\"Predicted Value:\", predicted)\n",
+        "if(predicted==0):\n",
+        "  print(\"The Conditions are Not Good to play Tennis Today\")\n",
+        "else:\n",
+        "  print(\"The Condiotions are Okay to play Tennis Today\")"
       ]
     },
     {
